NIPS -> NeurIPS, part 1

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 title: Machine Learning for Creativity and Design
-description: NIPS 2018 Workshop, Montreal, Canada
-eventdate: Saturday December 8ᵗʰ 8:30 &#8212; 18:00
+description: NeurIPS 2018 Workshop, Montreal, Canada
+eventdate: Saturday December 8ᵗʰ 8:30 &#8212; 18:15
